--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <title>Document</title>
 </head>
 body>
@@ -38,7 +39,7 @@ body>
     Utiliser un framework, comme : <span class="custom-family">Vue.JS</span>
   </p>
   <h3>Solution 2</h3>
-  <p class="solution">
+  <p class="solution"> 
     Utiliser une librairie, comme : <span>jQuery</span>
   </p>
   <h3>Solution 3</h3>
